--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@castery/caster-discord",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "description": "🤖⛓️ The Discord platform for caster",
     "main": "index.js",
     "engines": {
@@ -30,20 +30,20 @@
     },
     "homepage": "https://github.com/castery/caster-discord#readme",
     "devDependencies": {
-        "babel-cli": "^6.26.0",
+		"babel-cli": "^6.26.0",
         "babel-core": "^6.26.0",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "babel-preset-env": "^1.6.0",
-        "chai": "^4.1.1",
-        "mocha": "^3.5.0",
-		"eslint": "^4.8.0",
-		"eslint-config-airbnb-base": "^12.0.1",
-		"eslint-plugin-import": "^2.7.0"
+        "babel-preset-env": "^1.6.1",
+        "chai": "^4.1.2",
+        "eslint": "^4.10.0",
+        "eslint-config-airbnb-base": "^12.1.0",
+        "eslint-plugin-import": "^2.8.0",
+        "mocha": "^4.0.1"
     },
     "dependencies": {
-        "@castery/caster": "^0.0.12",
-        "debug": "^3.0.1",
-        "discord.js": "^11.1.0",
-        "joi": "^10.6.0"
+		"@castery/caster": "^0.0.13",
+        "debug": "^3.1.0",
+        "joi": "^13.0.1",
+        "discord.js": "^11.2.1"
     }
 }
